--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@hookform/resolvers": "^5.2.2",
     "@ignite-ui/react": "^2.2.4",
+    "@prisma/client": "^6.18.0",
+    "dotenv": "^17.2.3",
     "next": "16.0.1",
     "phosphor-react": "^1.4.1",
     "react": "19.2.0",
@@ -24,6 +26,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.1",
+    "prisma": "^6.18.0",
     "typescript": "^5.9.3"
   }
 }
