--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@ignite-ui/react": "^2.2.4",
     "@prisma/client": "^6.18.0",
+    "axios": "^1.13.1",
     "dotenv": "^17.2.3",
     "next": "16.0.1",
     "phosphor-react": "^1.4.1",
