--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.13.1",
     "dotenv": "^17.2.3",
     "next": "16.0.1",
+    "next-auth": "^4.24.13",
     "nookies": "^2.5.2",
     "phosphor-react": "^1.4.1",
     "react": "19.2.0",
